# S1-6

./: base16.c  eexdrazz.c  ex1.c  ex2.c  ex3.c
ai/: README.md  ai2.py  desktop.ini  requirements.txt  testai.py
ai/web app/: AIDTEC.py  app_gradio.py
cs2/: main.c
cs2/tp1/: ex1.c  ex2.c  ex3.c
cs2/tp2/: ex1.c  ex1v.c  ex2.c
leetcode/: main.c
programation c s1/: CMakeLists.txt  Makefile  Untitled-1.c  area.c  calc.c  devide.c  for.c  fuzbuz.c  isprime.c  main.c  newline.c  pewpew.c  somofdigits.c  sum.c  tableaus.txt  testfact.c  timer.c
programation c s1/TD-4/: ex1.c  ex2.c  ex3.c
programation c s1/allOthers/: Untitled-1.c  area  area.c  boolfunc.c  calc.c  clock  clock.c  devide.c  for.c  fuzbuz.c  hello.c  hellow.c  imagemr.c  isprime.c  main.c  miniGame.c  minigame2.c  minigameall.c  newline.c  pewpew.c  pomodoro.c  somofdigits.c  sum.c  tableaus.txt  testfact.c  timer.c
programation c s1/pointers/: adreses.c  charsP.c
programation c s1/s1-p/: Untitled-1.c  base16.c  count.c  one.c
programation c s1/tablau/: NParr.c  arraysA2dem.c  exIDK.c  garr.c  mergearr.c  resutarr.c  str[t].c
programation c s1/tp1/: ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6  ex6.c
programation c s1/tp2/: ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c
programation c s1/tp3/: ex1.c  ex10.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c
programation c s1/tp4/: Untitled1.c  ex1.c  ex10.c  ex11.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c
static/: app.py  index.html
